--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -9,6 +9,9 @@
 @import "blocks/sidepanel";
 @import "blocks/menu";
 @import "blocks/about";
+@import "blocks/resume";
+@import "blocks/skills";
+@import "blocks/progress";
 
 * {
     font-family: 'Poppins', sans-serif;
@@ -25,5 +28,5 @@
     width: 60px;
     height: 3px;
     background-color: $main-color;
-    margin-top: 25px;
+    margin: 25px auto 0 auto;
 }
