porfolio and prices sections completed

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -12,6 +12,8 @@
 @import "blocks/resume";
 @import "blocks/skills";
 @import "blocks/progress";
+@import "blocks/portfolio";
+@import "blocks/prices";
 
 * {
     font-family: 'Poppins', sans-serif;
