--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -14,6 +14,7 @@
 @import "blocks/progress";
 @import "blocks/portfolio";
 @import "blocks/prices";
+@import "blocks/contacts";
 
 * {
     font-family: 'Poppins', sans-serif;
