--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -22,6 +22,7 @@
     padding: 0;
 }
 
+
 .container {
     width: 1140px;
     margin: 0 auto;
@@ -33,3 +34,6 @@
     background-color: $main-color;
     margin: 25px auto 0 auto;
 }
+
+
+@import "blocks/media";
