--- a/src/sass/blocks/_prices.scss
+++ b/src/sass/blocks/_prices.scss
@@ -3,8 +3,8 @@
     &__wrapper {
         padding: 60px 50px 0 50px;
         display: grid;
-        grid-template: repeat(3, 44px) / repeat(2, 368px);
-        column-gap: 306px;
+        grid-template: repeat(3, minmax(45px, auto)) / repeat(2, 368px);
+        grid-auto-rows: minmax(45px, auto);
         row-gap: 15px;
         justify-content: space-between;
     }
